--- a/app.wxss
+++ b/app.wxss
@@ -20,6 +20,83 @@
   align-items: center;
   justify-content: center;
 }
+/* 浮层 */
+.block_content{
+  width: 80%;
+  border-radius: 10rpx;
+  padding: 15rpx 0 48rpx 0;
+  z-index: 998;
+}
+.block_title{
+  text-align: center;
+  padding: 25rpx 0 30rpx 0;
+  font-weight: 400;
+  font-size: 32rpx;
+}
+.block_code{
+  justify-content:center;
+  align-items: center;
+}
+.block_code input{
+  background: #efeff4;
+  border: none;
+  height: 65rpx;
+  line-height: 65rpx;
+  padding: 0 10rpx;
+  text-indent: 20rpx;
+  font-size: 26rpx;
+}
+.get_code{
+  width: 190rpx;
+  text-align: center;
+  background: #3197fb;
+  color: #fff;
+  height: 65rpx;
+  line-height: 65rpx;
+  font-size: 28rpx;
+  border-radius: 0;
+  padding: 0;
+  margin: 0;
+}
+.btn_box{
+  display: flex;
+  align-items: center;
+  justify-content:center;
+  margin-top: 38rpx;
+  padding: 10rpx 0;
+}
+.btn_box view{
+  /* padding:0 50rpx; */
+  width: 172rpx;
+  text-align: center;
+  height: 62rpx;
+  font-size: 28rpx;
+  line-height: 62rpx;
+  border-radius: 5rpx;
+}
+
+/* 没有的时候 */
+.list_none image{
+  width: 379rpx;
+  height: 336rpx;
+  margin: 100rpx 0 70rpx 0;
+}
+.list_none{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 34rpx;
+  color: #88888a;
+  height: 87vh;
+}
+.box_block .yes{
+  background: #3197fb;
+  color: #fff;
+}
+.no{
+  border: 1px solid #bbbbbb;
+  margin-right: 40rpx;
+}
 
 .border_top{
   border-top: 1rpx solid #efeff4;
@@ -71,7 +148,7 @@
   box-shadow:rgb(235, 235, 235) 0px 0px 4rpx inset;
 }
 .com_footer_btn{
-  padding: 26rpx 0;
+  padding: 20rpx 0;
   border-radius: 10rpx;
   width: 92%;
   margin-left: 4%;
@@ -131,15 +208,15 @@
   border-bottom: 1rpx solid #efeff4;
 }
 .select_header{
-  width: 80%;
-  margin-left: 10%;
   display: flex;
   justify-content: space-between;
 }
 .select_header>view{
-  padding: 25rpx 30rpx;
+  padding: 25rpx 0;
+  width: 33.3%;
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 .tan{
   width: 30rpx;
