--- a/page/tabBar/homePages/news/news.wxss
+++ b/page/tabBar/homePages/news/news.wxss
@@ -55,3 +55,18 @@
 .font_box{
   width: 80%;
 }
+
+/* 没有的时候 */
+.list_none image{
+  width: 379rpx;
+  height: 336rpx;
+  margin: 100rpx 0 70rpx 0;
+}
+.list_none{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 34rpx;
+  color: #88888a;
+  height: 87vh;
+}
