--- a/page/tabBar/homePages/perWageDetails/perWageDetails.wxml
+++ b/page/tabBar/homePages/perWageDetails/perWageDetails.wxml
@@ -33,8 +33,10 @@
 
   <view class='phone_title'>手机验证</view>
   <view class='code_box'>
-    <input type='number' placeholder='请输入验证码'></input>
-    <button>获取验证码</button>
+    <input bindinput='get_val' type='number' placeholder='请输入验证码'></input>
+    <button class='get_code' disabled='{{disabled}}' bindtap='getCode'>
+      {{time}}
+    </button>
   </view>
 
   <view bindtap='confirmBtn' class='bg_blue com_width btn'>{{btnFont}}</view>
