--- a/page/tabBar/homePages/seeWage/seeWage.wxss
+++ b/page/tabBar/homePages/seeWage/seeWage.wxss
@@ -20,9 +20,16 @@
 
 /* content */
 .content{
-  margin-top: 24rpx;
-  padding: 20rpx 0 20rpx 0;
+  /* margin-top: 24rpx; */
+  padding: 6rpx 0 0 0;
+  
+}
+.content>.bg_fff{
   position: relative;
+}
+.list_box{
+  margin-top: 25rpx;
+  padding: 20rpx 0;
 }
 .list{
   padding: 10rpx 0; 
