--- a/page/tabBar/homePages/stayAttendance/stayAttendance.wxml
+++ b/page/tabBar/homePages/stayAttendance/stayAttendance.wxml
@@ -26,7 +26,7 @@
       <view class='list_box bg_fff'
         wx:for="{{mineData.t}}" wx:item="" wx:key="">
         <view class='com_width'>
-          <view bindtap='perDetails' data-id="{{item.id}}">
+          <view>
             <view class='list'>
               <text class='list_title'>项目名称:</text>
               <text class='list_data'>{{item.projectName}}</text>
@@ -53,7 +53,7 @@
             </view>
           </view>
           <view data-id="{{item.id}}" bindtap='confirmationTap' 
-            class='bg_blue com_footer_btn'>
+            class='confirmation'>
             确认
           </view>
         </view>
@@ -72,7 +72,7 @@
       <view class='bg_fff list_box'
         wx:for="{{vipData}}" wx:item="item" wx:key="" >
         <view class="com_width">
-          <view bindtap='classDetails' data-projectid="{{item.projectId}}" 
+          <view data-projectid="{{item.projectId}}" 
             data-month="{{item.month}}" data-groupid="{{item.groupId}}">
             <view class='list'>
               <text class='list_title'>项目名称:</text>
@@ -97,7 +97,7 @@
           </view>
           <view bindtap='classDetails' data-projectid="{{item.projectId}}" 
             data-month="{{item.month}}" data-groupid="{{item.groupId}}" 
-            class='bg_blue com_footer_btn'>
+            class='confirmation'>
             确认
           </view>
         </view>
@@ -109,23 +109,5 @@
       <view>您目前无考勤确认记录</view>
     </view>
   </view>
- 
 
-
-  <!-- 浮层 -->
-  <view hidden='{{blockIsShow}}' class='box_block'>
-    <view class='bg_fff block_content'>
-      <view class='block_title'>获取验证码</view>
-
-      <view class='com_width block_code display_flex'>
-        <input placeholder='输入验证码' type='number'></input>
-        <view class='get_code'>获取验证码</view>
-      </view>
-
-      <view class='btn_box'>
-        <view bindtap='no_tap' class='no'>取消</view>
-        <view bindtap='confirmaedTap' class='yes'>确认</view>
-      </view>
-    </view>
-  </view>
 </view>
