--- a/page/tabBar/homePages/stayworkDetails/stayworkDetails.wxml
+++ b/page/tabBar/homePages/stayworkDetails/stayworkDetails.wxml
@@ -22,8 +22,8 @@
 
   <view class='phone_title'>手机验证</view>
   <view class='code_box'>
-    <input type='number' placeholder='请输入验证码'></input>
-    <button>获取验证码</button>
+    <input bindinput='get_val' type='number' placeholder='请输入验证码'></input>
+    <button bindtap='getCode' disabled='{{disabled}}' class='get_code'>{{time}}</button>
   </view>
 
   <view bindtap='confirmBtn' class='bg_blue com_width btn'>{{btnFont}}</view>
