--- a/page/tabBar/homePages/vipBlock/vipBlock.wxml
+++ b/page/tabBar/homePages/vipBlock/vipBlock.wxml
@@ -21,11 +21,11 @@
 
   </view>
   <!-- 项目筛选  -->
-  <view bindtap='screenTap' class='selsect_title bg_fff {{selectBox?"add_class":""}}'>
-    项目筛选
+  <view bindtap='screenTap' 
+    class='selsect_title bg_fff {{selectBox?"add_class":""}}'>
+    {{projectObj.name}}
     <image wx:if="{{selectBox}}" class='tan_top' src='/image/top_tan.png'></image>
     <image wx:else class='tan' src='/image/tan.png'></image>
-   
   </view>
 
   <!-- select -->
@@ -33,6 +33,7 @@
     <view bindtap='projectLisre'>全部</view>
     <view wx:for="{{manageProject.t}}" wx:item="item" wx:key=""
       data-groupId="{{item.groupId}}" wx:if="{{item.projectName}}"
+      data-name="{{item.projectName}}"
       bindtap='projectLisre'>
      {{item.projectName}}
     </view>
@@ -76,7 +77,6 @@
         查看详情
       </view>
     </view>
-   
   </view>
   <!-- 考勤 -->
   <view wx:elif="{{titleStatus == 1}}" class='attendance_block bg_fff'>
