--- a/page/tabBar/minePages/changePhone/changePhone.wxml
+++ b/page/tabBar/minePages/changePhone/changePhone.wxml
@@ -7,17 +7,21 @@
   <view class='content bg_fff'>
     <view class='border_bottomn'>
       <view class='display_flex wx_phone_box com_width'>
-        <text>+86 18801287297</text>
+        <text>{{oldPhone}}</text>
         <text class='color_blue'>修改成微信手机号</text>
       </view>
     </view>
 
     <view class=''>
-      <view class='display_flex wx_phone_box  com_width'>
-        <input placeholder='输入新手机号'></input> 
-        <text class='code_btn'>获取验证码</text>
+      <view class='display_flex wx_phone_box com_width'>
+        <input bindinput='get_val' placeholder='输入验证码'></input> 
+        <button bindtap='getCode' disabled='{{disabled}}' class='code_btn'>
+          {{time}}
+        </button>
       </view>
     </view>
   </view>
-  <view bindtap='next' class='com_footer_btn bg_blue'>下一步，填写新手机</view>
+  <view bindtap='next' class='com_footer_btn bg_blue'>
+    下一步，填写新手机
+  </view>
 </view>
