--- a/page/tabBar/minePages/myProject/myProject.wxss
+++ b/page/tabBar/minePages/myProject/myProject.wxss
@@ -27,6 +27,13 @@
   display:block;
   padding: 24rpx 5rpx;
 }
+.select_header>view{
+  padding: 25rpx 0;
+  width: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
 /* content */
 .content{
@@ -38,6 +45,9 @@
 }
 .com_list{
   padding: 6rpx 0;
+}
+.last_list{
+  padding-bottom: 20rpx;
 }
 .status_text{
   font-weight: 500;
@@ -57,12 +67,11 @@
 .btn_box{
   justify-content: flex-end;
   border-top: 1px solid #d9d9d9;
-  padding: 23rpx 0;
-  margin-top: 25rpx;
+  padding: 20rpx 0;
+  margin-top:0;
 }
 .btn_box view{
   margin-right: 30rpx;
-  padding: 10rpx 25rpx;
   border-radius: 4rpx;
   font-weight: 400;
 }
